...

  return (
    <GreenWaveScreen>
      <SafeAreaView
        style={styles.safeArea}
        edges={["top"]}
        testID="screen-signs"
      >
        <StatusBar style="dark" />
        <SignsHomeContent />
      </SafeAreaView>
    </GreenWaveScreen>
  );
...
